objects/PriceDimension__c.object
<CustomObject>    
    <description>Represents a price criteria dimension</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product attribute which provides the value for the dimension.</description>
        <label>Attribute</label>
        <referenceTo>ProductAttribute__c</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>PriceDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessObject__c</fullName>
        <description>The business object which provides the context for the dimension</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LineItem__c</fullName>
                    <default>true</default>
                    <label>LineItem__c</label>
                </value>
                <value>
                    <fullName>OrderLineItem__c</fullName>
                </value>
                <value>
                    <fullName>ExternalOrderSummaryItem__c</fullName>
                </value>
                <value>
                    <fullName>ProductAttributeValue__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChildFilterName__c</fullName>
        <description>The name of the child filter associated with the price dimension</description>
        <inlineHelpText>The name of the child filter associated with the price dimension</inlineHelpText>
        <label>Child Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContextType__c</fullName>
        <description>The type of context associated with the dimension</description>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Item</fullName>
                </value>
                <value>
                    <fullName>Order Line Item</fullName>
                </value>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Formula Field</fullName>
                </value>
                <value>
                    <fullName>Order Formula Field</fullName>
                </value>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
                <value>
                    <fullName>Order Child Filter</fullName>
                </value>
                <value>
                    <fullName>External Order Summary Item</fullName>
                </value>
                <value>
                    <fullName>External Order Formula Field</fullName>
                </value>
                <value>
                    <fullName>External Order Child Filter</fullName>
                </value>
                <value>
                    <fullName>Asset Line Item</fullName>
                </value>
                <value>
                    <fullName>Asset Attribute</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CumulativeDimensionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the cumulative dimension associated with the dimension. Only applicable to numeric dimensions</description>
        <label>Cumulative Dimension</label>
        <referenceTo>PriceDimension__c</referenceTo>
        <relationshipLabel>Related Dimensions</relationshipLabel>
        <relationshipName>RelatedDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <description>The data source which provides the value for the dimension.</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description for the dimension</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>    
    <fields>
        <fullName>RelationType__c</fullName>
        <description>The relation type</description>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The dimension type</description>
        <inlineHelpText>The dimension type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFP Price Dimension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContextType__c</columns>
        <columns>BusinessObject__c</columns>
        <columns>Datasource__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Type__c</columns>
        <columns>AttributeId__c</columns>
        <columns>RelationType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>APTS_Ext_ID__c</columns>
        <columns>BusinessObject__c</columns>
        <columns>Datasource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Dimensions</pluralLabel>    
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>